<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/key_unmute_speaker_flag"
        android:title="@string/title_unmute_speaker_flag"
        android:summary="@string/summary_unmute_speaker_flag"/>
    <com.hanhuy.android.a2dp.volume.VolumePreference
        android:key="speakervolume"
        android:dependency="@string/key_unmute_speaker_flag"
        android:title="@string/title_speakervolume_pref"
        android:summary="@string/summary_speakervolume_pref"
        android:dialogMessage="@string/dialog_msg_speakervolume_pref"
        android:dialogTitle="@string/dialog_title_speakervolume_pref" />
    <com.hanhuy.android.a2dp.volume.VolumePreference
        android:key="wiredvolume"
        android:title="@string/title_wiredvolume_pref"
        android:summary="@string/summary_wiredvolume_pref"
        android:dialogMessage="@string/dialog_msg_wiredvolume_pref"
        android:dialogTitle="@string/dialog_title_wiredvolume_pref" />
    <com.hanhuy.android.a2dp.volume.VolumePreference
        android:key="a2dpvolume"
        android:title="@string/title_a2dpvolume_pref"
        android:summary="@string/summary_a2dpvolume_pref"
        android:dialogMessage="@string/dialog_msg_a2dpvolume_pref"
        android:dialogTitle="@string/dialog_title_a2dpvolume_pref" />
    <CheckBoxPreference
        android:key="@string/key_show_ui_flag"
        android:title="@string/title_show_ui_flag"
        android:summary="@string/summary_show_ui_flag" />
    <CheckBoxPreference
        android:key="@string/key_silence_ringer_flag"
        android:title="@string/title_silence_ringer_flag"
        android:summary="@string/summary_silence_ringer_flag" />
</PreferenceScreen>